# ecoacao-urbanAI

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEMPORAL_CONFIGURATION_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  tests.yml
configs/: complete_config.yaml  default_config.yaml
scripts/: gee_export.js
src/urbanai/: __init__.py  __version__.py  cli.py  pipeline.py
src/urbanai/analysis/: __init__.py  intervention_analyzer.py  residual_calculator.py
src/urbanai/io/: __init__.py  readers.py  validators.py  writers.py
src/urbanai/models/: __init__.py  convlstm.py
src/urbanai/prediction/: __init__.py  predictor.py
src/urbanai/preprocessing/: __init__.py  band_processor.py  data_organizer.py  raster_loader.py  tocantins_integration.py
src/urbanai/training/: __init__.py  dataset.py  losses.py  metrics.py  trainer.py
src/urbanai/utils/: __init__.py  config.py  gpu_utils.py  logging.py  spatial.py  validation.py
src/urbanai/visualization/: __init__.py  map_generator.py
tests/: __init__.py  conftest.py  test_augmentation_shape_consistency.py  test_config_override.py  test_dataset_normalization.py  test_gradient_accumulation.py  test_imports.py
