[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanai"
version = "0.1.0"
description = "Deep learning framework for spatiotemporal urban heat prediction using ConvLSTM and satellite imagery"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Isaque Carvalho Borges", email = "isaque@ecoacaobrasil.org"}
]
maintainers = [
    {name = "EcoAção Brasil", email = "isaque@ecoacaobrasil.org"}
]
keywords = [
    "urban heat island",
    "deep learning",
    "ConvLSTM",
    "remote sensing",
    "climate adaptation",
    "spatiotemporal prediction",
    "Landsat",
    "thermal anomaly",
    "urban planning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "rasterio>=1.3.0",
    "GDAL>=3.5.0",
    "tocantins-framework>=0.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "geopandas>=0.13.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.9.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]

colab = [
    "google-colab>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/EcoAcao-Brasil/ecoacao-urbanai"
Repository = "https://github.com/EcoAcao-Brasil/ecoacao-urbanai"
"Bug Tracker" = "https://github.com/EcoAcao-Brasil/ecoacao-urbanai/issues"
"Tocantins Framework" = "https://github.com/EcoAcao-Brasil/tocantins-framework"

[project.scripts]
urbanai = "urbanai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["urbanai*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
urbanai = ["configs/*.yaml", "py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "tocantins_framework.*",
    "geopandas.*",
    "sklearn.*",
]
ignore_missing_imports = true
